--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main>
     <div class="container">
       <div class="card-body">
-        <img class="card-image" src="images/illustration-hero.svg" />
+        <img class="card-image" src="images/illustration-hero.svg" alt="girl dancing to music" />
         <div class="card-content">
           <h1>
             Order Summary
@@ -43,7 +43,7 @@
           </p>
 
           <div class="selected-plan-container">
-            <img src="images/icon-music.svg" />
+            <img src="images/icon-music.svg" alt="music note icon" />
             <div>
               <b>
                 Annual Plan
